# rust_full_stack_form

./: Cargo.toml  ReadMe.md
assets/: sqlite.db
src/: api_server.rs  database.rs  main.rs  paths.rs
