[package]
name = "mcmf_form"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rusqlite = "0.29.0"
actix-web = "4.3.1"
actix-rt = "2.8.0"
serde = { version = "1.0.160", features = ["derive"]}
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["runtime-actix-native-tls", "sqlite"] }

# google-sheets4 = "5.0.2+20230119"
# serde = "^1.0"
# serde_json = "^1.0"
# google-authenticator = "0.4.0"
# yup-oauth2 = "8.3.0"